fixed hero and header layout, fixed collapsing navbar

--- a/stylesheets/scss/main.scss
+++ b/stylesheets/scss/main.scss
@@ -101,15 +101,22 @@ ul {
 
 /* Header Stylesheets */
 
-// .hero {
-//   width: 100%;
-//   max-height: 100vh;
+.hero {
+  width: 100%;
+  max-height: 90vh;
+  overflow: hidden;
+  background: #252d35;
 
-//   video {
-//     width: 100%;
-//   }
-// }
+  video {
+    width: 100%;
+  }  
+}
 
+.hero::after{
+  content: '';
+  display: block;
+  clear: both;
+}
 // header {
 //   // position: relative;
 //   // bottom: 0;
@@ -128,6 +135,7 @@ ul {
 // }
 
 .navbar {    
+   padding: 0.5em 0.5em 1em;
    background: $navbar-bg-color;
    color: $base-light-color;
    display: flex;
